2002-09-18  Alexander Larsson  <alexl@redhat.com>

	Merge the new-icon-factory-branch branch to HEAD.
	
2002-09-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	* libnautilus-private/nautilus-bookmark.c:
	* src/file-manager/fm-desktop-icon-view.c:
	Final icon naming.

2002-09-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c:
	Compile fixes for gnome-desktop head.

2002-09-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	Also look for generic mimetypes.
	
2002-09-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	Clean up #defines

2002-09-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c (gnome_icon_lookup):
	Look up mime icons before file types.

2002-09-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/Makefile.am:
	Added SYSCONFDIR.
	Removed nautilus-find-icon-image.[ch]
	
	* libnautilus-private/gnome-icon-lookup.c:
	Add gif to gdk-pixbuf supported list.
	
	* libnautilus-private/gnome-thumbnail.c:
	Add gif to gdk-pixbuf supported list.
	Thumbnailing scripts
	Fix failed thumbnail directory creation
	
	* libnautilus-private/nautilus-directory-async.c: 
	* libnautilus-private/nautilus-file-private.h:
	* libnautilus-private/nautilus-file.c:
	* libnautilus-private/nautilus-file.h:
	* libnautilus-private/nautilus-icon-factory.c:
	custom_icon_uri -> custom_icon
	
	* libnautilus-private/nautilus-thumbnails.c:
	Write failed files on thumbnail failure.

2002-09-13  Alexander Larsson  <alexl@redhat.com>
	
	* libnautilus-private/gnome-thumbnail.[ch]:
	const cleanups
	Add gnome_thumbnail_has_uri.
	
	* libnautilus-private/nautilus-icon-container.c:
	* libnautilus-private/nautilus-icon-private.h:
	Clean up TODOs
	
	* libnautilus-private/nautilus-icon-factory-private.h:
	Remove nautilus_icon_factory_remove_by_uri
	
	* libnautilus-private/nautilus-icon-factory.c: